--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "base-mini-app",
+  "name": "days-since-iquit",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^7.2.4"
-  },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.19",
-    "@wagmi/connectors": "^7.1.5",
-    "@wagmi/core": "^3.3.1",
-    "@walletconnect/modal": "^2.7.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "viem": "^2.44.4",
-    "wagmi": "^3.4.1"
+    "@rainbow-me/rainbowkit": "^2.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.460.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "viem": "^2.7.0",
+    "wagmi": "^2.5.0",
+    "zustand": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   }
 }
