--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,10 @@
         "@/*": ["./src/*"]
       }
     },
-    "include": ["src"],
+    "include": [
+  "src",
+  "src/**/*",
+  "src/vite-env.d.ts"
+],
     "references": [{ "path": "./tsconfig.node.json" }]
   }
