--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@coinbase/onchainkit": "^0.35.0",
     "@tanstack/react-query": "^5.0.0",
     "framer-motion": "^11.0.0",
+    "frames.js": "^0.22.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
