--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.35.0",
+    "@farcaster/frame-sdk": "^0.1.13",
     "@tanstack/react-query": "^5.0.0",
     "framer-motion": "^11.0.0",
     "frames.js": "^0.22.0",
